# atomic-swap-contracts

./: .gitignore  Cargo.toml  OBridge.sol  README.md  flake.nix
.github/workflows/: cosmos.yml  dep-check.yml  near-dep-check.yml  near.yml  solana-dep-check.yml  solana.yml  typo.yml  utils.yml
cosmos/: Cargo.toml  demo.sh  flake.nix  round_trip.sh
cosmos/examples/: schema.rs
cosmos/schema/: confirm_msg.json  execute_msg.json  instantiate_msg.json  transfer_msg.json
cosmos/src/: lib.rs  tests.rs
evm/: README.md  hardhat.config.js  package-lock.json  package.json
evm/contracts/: OBridge.sol  TestERC20Dst.sol  TestERC20Src.sol
evm/scripts/: deploy.js
evm/test/: Business.js  Event.js  Obridge.js
near/: Cargo.toml  flake.nix
near/examples/: demo.rs  refund.rs  round-trip.rs  two-roles-round-trip.rs
near/src/: lib.rs
near/src/v0.1.1/: event.rs  lib.rs
near/tests/: integration-tests.rs
solana/: Cargo.toml  flake.nix
solana/assets/: keys.txt  platfrom.json  receiver.json  receiver.txt  sender.json  sender.txt
solana/examples/: demo.rs  round-trip.rs
solana/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
