[package]
name = "cosmos-atomic-swap"
version = "0.1.0"
description = "Cosmos atomic swap contract"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
thiserror = { version = "1.0.23" }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
utils = { path = "../utils" }
sha3 = "0.10.1"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
