[package]
name = "near-atomic-swap"
version = "0.1.0"
description = "Near atomic swap contract"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", branch = "master" }
uint = { version = "0.9.3", default-features = false }
sha3 = "0.10.1"
utils = { path = "../utils" }
near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs", optional = true }
tokio = { version = "1.1", features = ["rt", "macros"], optional = true }
near-crypto = { version = "0.14.0", optional = true }
near-primitives = { version = "0.14.0", optional = true }
near-jsonrpc-primitives = { version = "0.14.0", optional =true }
serde_json = { version = "1.0.66", optional =true }
base64 = { version = "0.13.0", optional =true }

[dev-dependencies]
anyhow = "1.0"
near-primitives = "0.5.0"
near-units = "0.2.0"
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.4"
test-with = "0.7"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[features]
demo = [ "near-jsonrpc-client", "tokio", "near-crypto", "near-primitives", "near-jsonrpc-primitives", "serde_json", "base64" ]
default = []
