[package]
name = "near-atomic-swap"
version = "0.1.0"
description = "Near atomic swap contract"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
sha3 = "0.10.6"
utils = { path = "../utils" }
near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs", optional = true }
tokio = "1.22.0"
near-primitives = { version = "0.14.0", optional = true }
near-jsonrpc-primitives = { version = "0.14.0", optional =true }
serde_json = { version = "1.0.66", optional =true }
base64 = { version = "0.13.0", optional =true }
bigint = "4.4.3"
ethabi = "18.0.0"
hex = "0.4.3"
near-contract-standards = "4.1.1"
near-crypto = "0.15.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
num256 = "0.3.5"
serde = "1.0.147"
serde_json = "1.0.89"
serde_with = "2.1.0"
web3 = "0.18.0"

[dev-dependencies]
anyhow = "1.0"
near-primitives = "0.5.0"
near-units = "0.2.0"
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.4"
test-with = "0.7"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[features]
demo = [ "near-jsonrpc-client", "tokio", "near-crypto", "near-primitives", "near-jsonrpc-primitives", "serde_json", "base64" ]
default = []
