[package]
name = "solana-atomic-swap"
version = "0.1.0"
description = "Solana atomic swap contract"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9"
borsh-derive = "0.9"
solana-program = "1.11"
utils = { path = "../utils" }

solana-streamer = { git = "https://github.com/solana-labs/solana.git", package = "solana-streamer", rev = "56cebf9" }
solana-test-validator = { git = "https://github.com/solana-labs/solana.git", package = "solana-test-validator", rev = "56cebf9" }
solana-rpc-client = { git = "https://github.com/solana-labs/solana.git", package = "solana-rpc-client", rev = "56cebf9" }

[dev-dependencies]
bs58 = "0.4"
solana-program-test = { git = "https://github.com/solana-labs/solana.git", package = "solana-program-test", rev = "56cebf9" }
solana-sdk = { git = "https://github.com/solana-labs/solana.git", package = "solana-sdk", rev = "56cebf9" }

[lib]
name = "atomicswap"
crate-type = ["cdylib", "lib"]
